--- a/SPY_Volume_ControlCharts/IEE474_Quality_Control_Project.ipynb
+++ b/SPY_Volume_ControlCharts/IEE474_Quality_Control_Project.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **IEE474 Quality Control Project: Volatility of the SPY**"
+        "# **Volatility of the SPY**"
       ],
       "metadata": {
         "id": "zFo7nFpLCqF1"
